<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:padding="30dp">

        <TextView
            style="@style/viewParent.headerText"
            android:text="@string/setting" />

        <RelativeLayout
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profileCircleImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/user"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/viewParent.headerText"
                android:text="Vũ Xuân Điệp"
                android:textSize="18sp"
                android:layout_toRightOf="@id/profileCircleImageView"
                android:layout_marginTop="20dp"/>

            <TextView
                style="@style/viewParent.headerText"
                android:text="@string/changeprofile"
                android:textSize="16sp"
                android:textColor="#5D5C5C"
                android:layout_below="@id/usernameTextView"
                android:layout_toRightOf="@id/profileCircleImageView"/>

            <ImageView
                style="@style/viewParent"
                android:src="@drawable/ic_more"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <Switch
            android:id="@+id/darkModeSwitch"
            style="@style/settingsText"
            android:drawableLeft="@drawable/ic_dark_mode"
            android:background="@drawable/edit"
            android:text="Dark Mode" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:background="@drawable/edit"
            android:text="Profile"/>

        <TextView
            android:id="@+id/txtShare"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/share"
            android:background="@drawable/edit"
            android:text="@string/share" />

        <TextView
            android:id="@+id/txtChangepassword"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/changepassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:text="@string/changepassword" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:background="@drawable/edit"
            android:text="@string/notifications"/>

        <Switch
            style="@style/settingsText"
            android:checked="true"
            android:drawableLeft="@drawable/notification"
            android:text="@string/notifications" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:background="@drawable/edit"
            android:text="Regional"/>

        <TextView
            android:id="@+id/txtFeedback"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/feedback"
            android:background="@drawable/edit"
            android:text="@string/feedback" />
        <TextView
            android:id="@+id/txtEvaluate"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/evaluate"
            android:background="@drawable/edit"
            android:text="@string/evaluate" />

        <TextView
            android:id="@+id/txtLanguages"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/languages"
            android:background="@drawable/edit"
            android:text="@string/languages" />

        <TextView
            android:id="@+id/txtLogout"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/logout"
            android:background="@drawable/edit"
            android:text="@string/logout" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit"
            android:text="App ver 2.0.1"
            android:textAlignment="center"/>
        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:background="@drawable/edit"
            android:textAlignment="center"/>


    </LinearLayout>
</ScrollView>